# copyright_notice

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: static_config.json
src/: constants.cpp  constants.h  main.cpp
src/configuration/: RunConfig.cpp  RunConfig.h  StaticConfig.h
src/file_processor/: Context.h  FileProcessor.cpp  FileProcessor.h
src/file_processor/git/: GitBlameLine.h  GitRepository.cpp  GitRepository.h  git_helpers.cpp  git_helpers.h
src/file_processor/git/cmdgit_src/: GitRepository.cpp  GitRepository.h
src/file_processor/git/libgit2_src/: GitRepository.cpp  GitRepository.h
src/file_processor/parser/: Header.cpp  Header.h  header_fields.h  header_helpers.cpp  header_helpers.h  header_utils.h
src/file_utils/: file_utils.cpp  file_utils.h
src/logger/: log.cpp  log.h
tests/: tst_RunConfigTest.cpp
